[tool.poetry]
name = "grey_lines"
version = "0.1.0"
description = ""
authors = ["beanpliu <beanpliu@tencent.com>"]

[tool.poetry.dependencies]
python = "~3.11"
pillow = "^10.0.1"
numpy = "^1.26.0"
scipy = "^1.11.3"
tqdm = "^4.66.1"
svgwrite = "^1.4.3"

[tool.poetry.dev-dependencies]

[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "default"


[tool.poetry.group.dev.dependencies]
matplotlib = "^3.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
